# 24hc18

./: .gitignore  README.rst  requirements.txt
docs/: Makefile  make.bat
docs/source/: conf.py  index.rst  protocol.rst
documentation/: .special.rst  Makefile  Page0.rst  Page1.rst  Page2.rst  Page3.rst  Page4.rst  Page5.rst  README  bareme.rst  conf.py  deroulement.rst  index.rst  matches.rst  presentation.rst  protocol.rst  scenario.rst  simulateur.rst  trousse.rst
documentation/_static/: hacks.css
engine/: .gitignore  Makefile  README  agent.cpp  agent.h  ant.cpp  ant.h  food.cpp  food.h  gameobject.cpp  gameobject.h  lineparser.cpp  lineparser.h  main.cpp  marabunta_engine_step.py  nest.cpp  nest.h  pheromone.cpp  pheromone.h  rand.cpp  rand.h  scenario.cpp  scenario.h  scenario1.cfg  team.cpp  team.h
engine-test/: .clang-format  CMakeLists.txt  test_gears_lineparser.cpp
engine/gears/: agent.cpp  agent.h  gameclock.cpp  gameclock.h  gameobject.cpp  gameobject.h  lineparser.cpp  lineparser.h  main.cpp  rand.cpp  scenario_base.cpp  scenario_base.h  snitch.cpp  snitch.h  team_base.cpp  team_base.h  timeutils.h  utils.cpp  utils.h
planet/: .gitignore  Planet.qml  Rtfm.qml  Scene.qml  ant.cpp  ant.h  food.cpp  food.h  gamecomm.cpp  gamecomm.h  gameentity.cpp  gameentity.h  main.cpp  main.qml  nest.cpp  nest.h  pheromone.cpp  pheromone.h  planet.pro
presentation/: discour.odt  discours.odt  pres_marabunta.odp
scores/: manage.py
spawner/: README  jail.profile
subject/: subject.tex
tools/: create_venv.sh  replay_log_filter.py  snitch_server.py
(+72 files in other folders)
